@@ -1,4 +1,7 @@
 ##### Tue 12/06/2012
+* Add removal and reduction in netlist::Block.
+* Add another return value in elaborate(), elab_result_t result, to identifier the required operation in the upper level, 
+  such as removal or further reduction.
 * Fix the bug in reduce concatenations such as {32{1'b0}}.
 
 ##### Mon 11/06/2012
